Added action class Added member action functionality

--- a/app/assets/stylesheets/app_kit/application.scss
+++ b/app/assets/stylesheets/app_kit/application.scss
@@ -11,6 +11,7 @@ $property-value-color: $base-font-color !default;
 @import "form";
 @import "nav";
 @import "breadcrumb";
+@import "resources";
 
 body {
     @include outer-container;
