Added association handling and formatting Added select2 for select handling

--- a/app/assets/stylesheets/app_kit/application.scss
+++ b/app/assets/stylesheets/app_kit/application.scss
@@ -4,6 +4,8 @@
 @import "base/base";
 @import "font-awesome-sprockets";
 @import "font-awesome";
+@import "select2";
+@import "select2-bootstrap";
 $property-header-color: #999 !default;
 $property-value-color: $base-font-color !default;
 @import "tables";
