--- a/app/assets/stylesheets/app_kit/base/_variables.scss
+++ b/app/assets/stylesheets/app_kit/base/_variables.scss
@@ -32,7 +32,7 @@ $light-yellow: #FFF6BF;
 $light-green: #E6EFC2;
 
 // Background Color
-$base-background-color: #f5f5f5;
+$base-background-color: #fcfcfc;
 
 // Font Colors
 $base-font-color: $dark-gray;
