--- a/app/assets/stylesheets/app_kit/base/_tables.scss
+++ b/app/assets/stylesheets/app_kit/base/_tables.scss
@@ -6,10 +6,12 @@ table {
 }
 
 th {
+    margin:0px;
   border-bottom: 1px solid darken($base-border-color, 15);
   font-weight: bold;
-  padding: ($base-spacing / 2) 0;
   text-align: left;
+  background: #f5f5f5;
+  font-size: 0.8em;
 }
 
 td {
