--- a/app/assets/stylesheets/app_kit/breadcrumb.css.scss
+++ b/app/assets/stylesheets/app_kit/breadcrumb.css.scss
@@ -5,14 +5,13 @@ div.ap-breadcrumb {
     border: 1px solid #eee;
     border-bottom: 1px solid #ccc;
     border-radius: 5px;
-    margin-top: 20px;
     margin-bottom: 20px;
     font-size: 0.8em; 
     background-color: #fff;
     font-weight: bold;
     ul {
         float: left;
-        background: rgba(246, 247, 248, 1);
+        @include linear-gradient(#fff, #fff);
         display: inline-block;
         li {
             display: inline-block;
@@ -44,17 +43,22 @@ div.ap-breadcrumb {
             } 
         }
     }
-    ul.tools {
+    .tools {
+        @include linear-gradient(#fff, #fff);
         float:right;
-        li {
+        @include clearfix;
+        a {
+            @include transition(all, 0.5s);
+            float: left;
+            display: block; 
+            color: #999;
+            padding: 10px 20px;
             border-left: 1px solid #ccc;
-            a {
-                color: #666;
-            }
-            a:hover {
-                color: $base-accent-color;
-            }
+            color: #666;
         }
-    
+        a:hover {
+            color: #000;
+            background: #f0f0f0;
+        }
     }
 }
