--- a/app/assets/stylesheets/app_kit/nav.scss
+++ b/app/assets/stylesheets/app_kit/nav.scss
@@ -1,15 +1,17 @@
 .nav {
-    margin-bottom: 20px;
+    background: white;
+    border-bottom: 2px solid #444; 
     a {
-        display: inline-block;
-        color: #666;
-        padding: 5px 20px;
         font-weight: bold;
+        @include transition(all, 0.5s);
+        display: inline-block;
+        color: #999;
+        padding: 10px 20px;
     }
     a:hover {
         color: #222;
     }
     a.active {
-        color: #000;
+        color: #222;
     }
 }
