--- a/app/views/app_kit/resources/show.html.erb
+++ b/app/views/app_kit/resources/show.html.erb
@@ -3,39 +3,67 @@
     <li class="active"><span class="resource"><%= @record.class.name.humanize %></span><%= @record %></li>
 <% end %>
 <% content_for :breadcrumb_tools do %>
-    <li><%= link_to icon('edit'), edit_polymorphic_path([ app_kit, @record]) %></li>
-    <li><%= link_to icon('trash'), polymorphic_path([ app_kit, @record]) %></li>
+    <%= link_to icon('edit'), edit_polymorphic_path([ app_kit, @record]) %>
+    <%= link_to icon('trash'), polymorphic_path([ app_kit, @record]) %>
 <% end %>
 <div class="show-details">
-    <div class="panelkit details">
+    <div class="panelkit">
         <div class="pk-title"><%= @record %></div>
         <div class="pk-body">
-            <div class="keyval">
-                <% resource.detail_fields.each do |field| %>
-                    <div class="kv-row">
-                        <span class="kv-key"><%= field.display_name %></span><span class="kv-value"><%= format_attribute(@record, field) %></span>
-                    </div>
-                <% end %>
+            <div class="show-details-column">
+                <div class="keyval">
+                    <% resource.detail_fields.each do |field| %>
+                        <div class="kv-row">
+                            <span class="kv-key"><%= field.display_name %></span><span class="kv-value"><%= format_attribute(@record, field) %></span>
+                        </div>
+                    <% end %>
+                </div>
             </div>
+            <% if resource.member_actions.select{|name, a| a.enabled_for_record?(@record)}.count > 0 %>
+            <div class="show-actions-column">
+                <h2>Actions</h2>
+                <ul class="links">
+                    <% resource.member_actions.each do |name, action| %>
+                        <% if action.enabled_for_record?(@record) %>
+                            <li><%= link_to action.name.to_s.humanize, polymorphic_path([app_kit, action.name, @record])%></li>
+                        <% end %>
+                    <% end %>
+                </ul>
+            </div>
+            <% end %>
         </div>
     </div>
-    <div class="actions">
-        <h2>Actions</h2>
-        <ul>
-            <% resource.member_actions.each do |name, action| %>
-                <% if action.enabled_for_record?(@record) %>
-                    <li><%= link_to action.name.to_s.humanize, polymorphic_path([app_kit, action.name, @record])%></li>
-                <% end %>
-            <% end %>
-        </ul>
-    </div>
 </div>
-<% resource.has_many_associations.each do |assoc_name| %>
+<% resource.has_many_associations.each do |assoc| %>
     <div class="panelkit">
-        <div class="pk-title"><%= assoc_name.to_s.humanize.pluralize %> </div>
-        <div class="body">
-            <% @record.send(assoc_name).each do |assoc_record| %>
-                <%= assoc_record %>
+        <div class="pk-title"><%= assoc.name.to_s.humanize.pluralize %> </div>
+        <div class="pk-body">
+            <% if @record.send(assoc.name).count > 0 %>
+                <table>
+                    <thead>
+                        <tr>
+                            <% AppKit::Resource.find(assoc.klass).table_fields.each do |field| %>
+                                <th><%= field.display_name %></th>
+                            <% end %>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <% @record.send(assoc.name).each do |assoc_record| %>
+                            <tr>
+                                <% AppKit::Resource.find(assoc.klass).table_fields.each do |field| %>
+                                    <td><%= format_attribute(assoc_record, field) %></td>
+                                <% end %>
+                                <td class="actions"><%= link_to 'View', polymorphic_path([app_kit, assoc_record]) %></td>
+                            </tr>
+                        <% end %>
+                    </tbody>
+                </table>
+            <% else %>
+                <p class="no-data">
+                No <%= assoc.name.to_s.humanize.pluralize %> found for this <%= @record.class.name.humanize %>. <br/>
+                <%= link_to 'Create', new_polymorphic_path([app_kit, assoc.klass]) %> a new <%= assoc.name.to_s.humanize %>.
+                </p>
             <% end %>
         </div>
     </div>
