--- a/app/views/app_kit/resources/show.html.erb
+++ b/app/views/app_kit/resources/show.html.erb
@@ -1,6 +1,6 @@
 <% content_for :breadcrumb do %>
-    <li><%= link_to @record.class.name.humanize.pluralize, [app_kit, @record.class] %></li>
-    <li class="active"><span class="resource"><%= @record.class.name.humanize %></span><%= @record %></li>
+    <li><%= link_to resource.plural_display_name, [app_kit, @record.class] %></li>
+    <li class="active"><span class="resource"><%= resource.display_name %></span><%= @record %></li>
 <% end %>
 <% content_for :breadcrumb_tools do %>
     <%= link_to icon('edit'), edit_polymorphic_path([ app_kit, @record]) %>
