--- a/app/assets/stylesheets/app_kit/application.scss
+++ b/app/assets/stylesheets/app_kit/application.scss
@@ -14,7 +14,7 @@ $property-value-color: $base-font-color !default;
 @import "nav";
 @import "breadcrumb";
 @import "resources";
-
+@import "buttons";
 body {
     padding: 0px;
     margin: 0px;
