--- a/app/assets/stylesheets/app_kit/panels.scss
+++ b/app/assets/stylesheets/app_kit/panels.scss
@@ -74,6 +74,9 @@
     @include user-select(none);
     text-align: right;
     padding-right: 15px;
+    .primary {
+        @include button;
+    }
 }
 .panelkit .pk-body {
     ul.links {
