--- a/app/assets/stylesheets/app_kit/form.scss
+++ b/app/assets/stylesheets/app_kit/form.scss
@@ -2,11 +2,9 @@
     padding: 5px;
     font-size: 0.8em;
     label {
-        display: block;
         color: #999;
     }
     input {
-        display: block;
     }
     span.error {
         font-weight: bold;
@@ -34,4 +32,7 @@
         margin-right: 5px;
         margin-left: 5px;
     }
+}
+input[type=submit] {
+    margin-top: 20px;
 }
