--- a/app/assets/stylesheets/app_kit/nav.scss
+++ b/app/assets/stylesheets/app_kit/nav.scss
@@ -1,17 +1,44 @@
 .nav {
-    background: white;
+    @include linear-gradient(#414141,#323232);
     border-bottom: 2px solid #444; 
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
+    @include clearfix;
+    font-size: 0.8em;
     a {
-        font-weight: bold;
         @include transition(all, 0.5s);
+        float: left;
+        border-left: 1px solid #292929;
+        border-right: 1px solid #4A4A4A;
+        font-weight: bold;
         display: inline-block;
-        color: #999;
-        padding: 10px 20px;
+        color: #888;
+        padding: 10px 15px;
+        text-align: center;
+        i {
+            display: block;
+            margin: auto auto;
+            border: 1px solid #555;
+            width: 44px;
+            height: 44px;
+            text-align: center;
+            border-radius: 22px;
+            line-height: 44px;
+            background: #333;
+        }
+        span {
+            display: block;
+        }
     }
     a:hover {
-        color: #222;
+        color: #ccc; 
     }
     a.active {
-        color: #222;
+        color: #fff; 
+        i {
+            border-color: #fff;
+        }
+    }
+    a:last-child {
+        border-right: none;
     }
 }
