--- a/app/assets/stylesheets/app_kit/nav.scss
+++ b/app/assets/stylesheets/app_kit/nav.scss
@@ -17,7 +17,6 @@
         i {
             display: block;
             margin: auto auto;
-            border: 1px solid #555;
             width: 44px;
             height: 44px;
             text-align: center;
@@ -31,11 +30,14 @@
     }
     a:hover {
         color: #ccc; 
+        i {
+        }
     }
     a.active {
         color: #fff; 
         i {
             border-color: #fff;
+            background-color: #555;
         }
     }
     a:last-child {
