--- a/app/assets/stylesheets/app_kit/panels.scss
+++ b/app/assets/stylesheets/app_kit/panels.scss
@@ -22,8 +22,15 @@
         text-shadow: 0 1px 1px white;
         border: 1px solid darken($base-background-color,10);
         border-bottom: 1px solid darken($base-background-color,30);
-        i {
+        >i {
             padding-right: 15px;
+        }
+        span.right {
+            float: right;
+            a {
+                color: #888;
+                font-size: 0.8em;
+            }
         }
     }
     div.pk-body {
@@ -75,7 +82,7 @@
     text-align: right;
     padding-right: 15px;
     .primary {
-        @include button;
+        @include button(simple, $base-accent-color, 14px, 5px 8px);
     }
 }
 .panelkit .pk-body {
