--- a/app/views/app_kit/resources/index.html.erb
+++ b/app/views/app_kit/resources/index.html.erb
@@ -1,36 +1,45 @@
 <% content_for :breadcrumb do %>
-    <li class="active"><%= resource.plural_display_name %></li>
+  <li class="active"><%= resource.plural_display_name %></li>
 <% end %>
 <div class="panelkit">
-    <div class="pk-title">
-        <%= resource_name %>
-        <span class="right"><%= link_to icon('filter', 'Filter'), '#', class: 'filter-trigger' %></span>
-    </div>
-    <div class="pk-body">
-        <table>
-            <thead>
-                <tr>
-                    <th class="checkbox-cell"><%= check_box_tag :all %></th>
-                    <% resource.table_fields.each do |field| %>
-                        <th><%= sort_link [:app_kit, @q], field.sort_field, field.display_name %></th>
-                    <% end %>
-                </tr>
-            </thead>
-            <tbody>
-                <% @records.each do |record| %>
-                    <tr class="data-row" data-url="<%= polymorphic_path([app_kit,record]) %>">
-                        <td class="checkbox-cell"><%= check_box_tag record.id %></td>
-                        <% resource.table_fields.each do |field| %>
-                            <td><%= format_attribute(record,field) %></td>
-                        <% end %>
-                    </tr>
-                <% end %>
-            </tbody>
-        </table>
-    </div>
+  <div class="pk-title">
+    <%= resource_name %>
+    <span class="right">
+      <%= link_to icon('filter', 'Filter'), '#', class: 'filter-trigger' %>
+    </span>
+  </div>
+  <div class="pk-body">
+    <table>
+      <thead>
+        <tr>
+          <th class="checkbox-cell"><%= check_box_tag :all %></th>
+          <% resource.table_fields.each do |field| %>
+            <th>
+              <%= sort_link [:app_kit, @q],
+                field.sort_field,
+                field.display_name %>
+            </th>
+          <% end %>
+        </tr>
+      </thead>
+      <tbody>
+        <% @records.each do |record| %>
+          <tr class="data-row" data-url="<%= ak_path(record) %>">
+            <td class="checkbox-cell"><%= check_box_tag record.id %></td>
+            <% resource.table_fields.each do |field| %>
+              <td><%= format_attribute(record,field) %></td>
+            <% end %>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
 </div>
 <div class="buttons">
-    <%= link_to "New #{resource_name.singularize}", new_polymorphic_path([app_kit, model]), class: 'primary' %>
+  <%= link_to "New #{resource_name.singularize}",
+    new_polymorphic_path([app_kit, model]),
+    class: 'primary' %>
 </div>
 <%= render partial: 'filter_panel', locals: { filter_resource: resource } %>
-<div class="filter-screen"></div> 
+<div class="filter-screen"></div>
+<%= debug params %>
